--- a/app/src/main/res/layout/activity_location_disclaimer.xml
+++ b/app/src/main/res/layout/activity_location_disclaimer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LocationDisclaimerActivity"
+    tools:context=".ui.activity.LocationDisclaimerActivity"
     android:background="@color/colorPrimaryDark"
     android:fitsSystemWindows="true">
 
