--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -156,10 +156,12 @@
 
   <TextView
       android:id="@+id/textViewUpdatedAt"
+      android:textAllCaps="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/updated_at"
       android:textColor="@color/white"
+      android:layout_marginBottom="10dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.054"
@@ -186,7 +188,6 @@
       android:layout_height="wrap_content"
       android:layout_marginTop="200dp"
       android:text="@string/feel_like"
-
       android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.392"
